ON-267 | brien | fixed things I broken in ON-256

--- a/app/styleguides/demo/components/latest-content.css
+++ b/app/styleguides/demo/components/latest-content.css
@@ -45,31 +45,35 @@
     }
   }
 
-  .section__article-list {
+  .section__container {
     padding-bottom: em(15);
     padding-right: em(20);
     width: 100%; /* IE11 */
-    display: flex;
-    flex-direction: column;
-
-    & li:first-child {
-      flex-grow: 1;
-    }
 
     @mixin medium-screen {
       padding-right: 0;
     }
 
-    &.section__article-list-- {
+    &.section__container-- {
       &entertainment {
-        order: 1;
-      }
+         order: 1;
+       }
       &news {
-        order: 2;
-      }
+         order: 2;
+       }
       &sports {
-        order: 3;
-        padding-right: 0;
+         order: 3;
+         padding-right: 0;
+       }
+    }
+
+    & .container__article-list {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+
+      & li:first-child {
+        flex-grow: 1;
       }
     }
   }
